# SolderOtto

./: .gitignore  LICENSE.md  README.md  west.yml
app/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml  west.yml
app/src/: main.c
app/zephyr/: module.yml
cad/: .directory  case-bot_part.step  case-cover_part.step  case-top_part.step  case.20240515-182223.FCBak  case.20240518-100412.FCBak  case.FCStd  case_new-bot_base.step  case_new-bot_part.step  case_new-cover_part.step  case_new-front_adapter.step  case_new.20240519-120730.FCBak  case_new.20240623-101959.FCBak  case_new.20240624-091808.FCBak  case_new.FCStd
cad/models/: 99_0624_00_07.stp
cube/4_channel/: 4_channel.ioc
cube/stm32/: .mxproject  stm32.ioc
cube/stm32_new/: stm32_new.ioc
drivers/: CMakeLists.txt  Kconfig
drivers/bt81x/: CMakeLists.txt  Kconfig  bt81x.c  bt81x_common.c  bt81x_copro.c  bt81x_drv.c  bt81x_drv.h  bt81x_host_commands.h
drivers/ft81x/: CMakeLists.txt  Kconfig
dts/bindings/bt81x/: bridgetek,bt81x.yaml
dts/bindings/ft81x/: ftdi,ft817.yaml
embassy/: launch.json
embassy/app/: Cargo.toml  Embed.toml  memory.x  rust-toolchain.toml
embassy/app/.cargo/: config.toml
embassy/app/src/: flash_memory.rs  main.foo  main.rs
embassy/app/src/solderotto/: handle.rs  mod.rs
embassy/loader/: Cargo.toml  Embed.toml  memory.x
embassy/loader/.cargo/: config.toml
embassy/loader/src/: main.rs
firmware/: cargo.toml
firmware/app/: Cargo.toml  t245_1.txt  t245_45.txt  t245_50.txt
firmware/app/.cargo/: config.toml
firmware/app/data/: a.txt  analyse.py  t245.txt  t245_filtered.txt  t245_new.txt  t245_new_bak.txt
firmware/app/src/: main.rs
firmware/app/src/dfu/: mod.rs
firmware/app/src/solderotto/: mod.rs
firmware/loader/: Cargo.toml  build.rs  memory.x
firmware/mx25r/: Cargo.toml
firmware/mx25r/src/: lib.rs
hardware/SolderOtto/: #auto_saved_files#  SolderOtto.csv  SolderOtto.kicad_pcb  SolderOtto.kicad_prl  SolderOtto.kicad_pro  SolderOtto.kicad_sch  SolderOtto.wbk  SolderOtto_4_lay.kicad_pcb  SolderOtto_old.kicad_pcb  _autosave-channel.kicad_sch  channel.kicad_sch  channel1.kicad_sch  channel_meas.kicad_sch  channel_power.kicad_sch  common.kicad_sch  display.kicad_sch  ethernet.kicad_sch  external.kicad_sch  fp-info-cache  mcu.kicad_sch  overview.kicad_sch  place_footprints.ini  power_latch.kicad_sch  supply.kicad_sch  supply.kicad_sch-bak  untitled.kicad_sch  ~SolderOtto.kicad_sch.lck
hardware/SolderOtto/bom/: ibom.html
hardware/display_adapter/: display_adapter.kicad_pcb  display_adapter.kicad_pro  display_adapter.kicad_sch
hardware/simulations/: Draft1.raw  SN74LVC2G125.asy  VOM1271T.txt  dtd123ek_ltspice.lib  output.asc  output.op.raw  output.raw
hardware/simulations/JBC Soldering Station Simulations/: AC MOSFET Driver.asc  AC MOSFET Driver.plt  AC MOSFET Driver.raw  AC MOSFET Driver_5V.raw  BZX84C5V6.txt  Current Sense.asc  Current Sense.raw  Draft1.raw  Power Supply.asc  Power Supply.raw
hardware/transormer_board/: fp-info-cache  transormer_board.kicad_pcb  transormer_board.kicad_prl  transormer_board.kicad_pro  transormer_board.kicad_sch
include/app/drivers/bt81x/: bt81x.h  bt81x_common.h  bt81x_copro.h  bt81x_dl.h  bt81x_memory.h  bt81x_reference_api.h
simulations/: DTD123EK.asy  Draft1.asc  Draft1.op.raw  Drafta1.asc  VOM1271T.asy
simulations/JBC Soldering Station Simulations/: AC MOSFET Driver.raw  AC MOSFET Driver_5V.raw  Draft1.op.raw
zephyr/: west.yml
