[package]
edition = "2021"
name = "solderotto-loader"
version = "0.1.0"
description = "SolderOtto-bootloader"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

cortex-m = { version = "0.7.7", features = ["inline-asm","critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-stm32 = { version = "0.1.0", features = ["stm32g474qe"] }
embassy-boot-stm32 = { version="0.2.0" }
embassy-usb = { version = "0.3.0", default-features = false }
embassy-usb-dfu = { version = "0.1.0", features = ["dfu", "cortex-m"] }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version="0.6.1"}

[patch.crates-io]
embassy-stm32 = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-boot-stm32 = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-usb = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-usb-dfu = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-futures = { git = 'https://github.com/embassy-rs/embassy.git' }
embassy-sync = { git = 'https://github.com/embassy-rs/embassy.git' }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-stm32/defmt",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
    "embassy-usb-dfu/defmt"
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false